--- a/templates/general/movimientos/movimientos_form.html
+++ b/templates/general/movimientos/movimientos_form.html
@@ -98,6 +98,9 @@
 									  </div>
 									  <div class="col-sm-5 col-xs-12">							      	
 							         	<div class="col-xs-12"> 
+							         		<div class="col-sm-8 col-xs-7"><span class="totales_comprobante">Fecha Comprobante</span></div> <div class="col-sm-4 col-xs-5">{% bootstrap_field form.fecha_cpb show_label=False%}</div> 
+							         	</div>
+							         	<div class="col-xs-12"> 
 							         		<div class="col-sm-8 col-xs-7"><span class="totales_comprobante">Total Comprobante</span></div> <div class="col-sm-4 col-xs-5">{% bootstrap_field form.importe_total show_label=False%}</div> 
 							         	</div>
 							         
