--- a/templates/general/varios/cambiar_password.html
+++ b/templates/general/varios/cambiar_password.html
@@ -6,53 +6,50 @@
         <link rel="stylesheet" href="{% static 'css/comprobantes.css'%}" type="text/css" >  
 {% endblock %}
 
-<div class="modal-dialog modal-modal">
-        <div class="modal-content">
-               <div class="row">
-                 <div data-dismiss="modal" class="close-modal"><button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button></div>
-                 <div class="modal-head">CAMBIAR CONTRASEÑA</div>
-                <form method="post" class="login-form" accept-charset="UTF-8" role="form" id="cambio_pass">
-                <div class="modal-body  text-center">
-                                                                                  
-                             
-          								   {% csrf_token %}			
-          									       
-                           <div class="row">
-                            <div class="col-sm-6">{% bootstrap_field form.new_password  %}</div>
-                            
-                            <div class="col-sm-6">{% bootstrap_field form.reenter_password %}</div>
-                            </div>                                      
-                           
-
-          							        	      
-          									     {% if messages %}
-          						              {% for message in messages %}
-          						                 <div class="alert alert-danger alert-dismissible" role="alert">
-          						                   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button><strong>{{ message }}</strong>
-          						                 </div>
-          						              {% endfor %}
-          						           {% endif %}
-															
-                         	
-                </div>
-                <div class="modal-buttons">
-                        <div class="row">
-                              	<div class="col-xs-6">
-                                  <button data-dismiss="modal" class="btn pull-left btn red-flamingo" type="button">
-                                      <i class="fa fa-times"></i>
-                                      Cancelar
-                                  </button>
-                                </div>
-                                <div class="col-xs-6">
-                                  <button id="AceptarPasswd" type="button" class="btn pull-right blue-steel"><i class="fa fa-check"></i>Aceptar</button>
-                                </div>
-                                
-                        </div>
-                </div>
-                </form>
-               
-            </div>  
-        </div>   
+<div class="modal-dialog modal-modal" style="width:300px;">
+  <div class="modal-content">
+    <div class="modal-wrapper">
+      <div data-dismiss="modal" class="close-modal"><button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button></div>
+      <div class="modal-head">CAMBIAR CONTRASEÑA</div>
+      <form method="post" class="login-form" accept-charset="UTF-8" role="form" id="cambio_pass">
+        <div class="modal-body  text-center">
+          <div class="col-xs-12">
+          {% csrf_token %}
+          <div class="row">
+            <div class="col-sm-12">{% bootstrap_field form.new_password  %}</div>
+          </div>
+          <div class="row">
+            <div class="col-sm-12">{% bootstrap_field form.reenter_password %}</div>
+          </div>
+          </div>
+          {% if messages %}
+            {% for message in messages %}
+              <div class="alert alert-danger alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button><strong>{{ message }}</strong>
+              </div>
+            {% endfor %}
+          {% endif %}
+        </div>
+        <div class="modal-buttons">
+          <div class="col-xs-12">
+          <div class="row">
+            <div class="col-xs-6">
+              <button data-dismiss="modal" class="btn pull-left btn-sm red-flamingo" type="button">
+              <i class="fa fa-times"></i>
+              Cancelar
+              </button>
+            </div>
+            <div class="col-xs-6">
+              <button id="AceptarPasswd" type="button" class="btn btn-sm pull-right blue-steel"><i class="fa fa-check"></i>Aceptar</button>
+            </div>
+            
+          </div>
+        </div>
+        </div>
+      </form>
+      
+    </div>
+  </div>
 <script type="text/javascript">
           $( "#AceptarPasswd" ).click(function() {
             // csrfmiddlewaretoken = $("#selecc_cpbs").find("input[name='csrfmiddlewaretoken']" ).val();
