--- a/templates/graficos.html
+++ b/templates/graficos.html
@@ -4,7 +4,7 @@
 <script src="{% static 'js/highcharts.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/exporting.js' %}" type="text/javascript"></script>
 <div class="row">  
-    <div class="col-sm-6">
+    <div class="col-sm-6 cerca">
        <div class="portlet box">
             <div class="portlet-title encabezado toolbar_blue">
                 <div class="caption">
@@ -25,7 +25,7 @@
             </div>
         </div> 
     </div>
-    <div class="col-sm-6">
+    <div class="col-sm-6 cerca">
        <div class="portlet box">
             <div class="portlet-title encabezado toolbar_blue">
                 <div class="caption">
