--- a/templates/barra_totales.html
+++ b/templates/barra_totales.html
@@ -1,5 +1,5 @@
 <div class="row">                           
-  <div class="col-sm-12"> 
+  <div class="col-sm-12 cerca"> 
    <div class="portlet box">                                           
         <div class="portlet-body">
          <div class="row">                  
