--- a/templates/index.html
+++ b/templates/index.html
@@ -23,13 +23,13 @@
         
 					{% block main %}   
           
-						                      <div class="col-sm-10">                                                                              
+						                      <div class="col-sm-10 cerca">                                                                              
                                    {% if 'gral_barra_totales' in permisos_grupo and not sitio_mobile %}  
                                       {% include "barra_totales.html" %}                                  
                                   {% endif %}  
                                     {% if tipo_usr == 0 or 'gral_ultimos_cpbs' in permisos_grupo %}
                                     <div class="row">                           
-                                            <div class="col-sm-12">                                               
+                                            <div class="col-sm-12 cerca">                                               
                                               
                                                {% include "ultimos_cpbs.html" %}                      
                                                                 
@@ -40,7 +40,7 @@
                                     
                                     {% if tareas and 'gral_tareas' in permisos_grupo and not sitio_mobile %}
                                       <div class="row">  
-                                          <div class="col-xs-12">
+                                          <div class="col-xs-12 cerca">
                                              <div class="portlet box">
                                                   <div class="portlet-title encabezado toolbar_blue">
                                                       <div class="caption">
