arreglo de los modales y libro_iva

--- a/templates/index.html
+++ b/templates/index.html
@@ -89,7 +89,7 @@
                        {% include "tareas.html" %} 
                     </div>
                     <div class="modal-footer">
-                      <button data-dismiss="modal" class="btn pull-left btn red-flamingo" type="button">
+                      <button data-dismiss="modal" class="btn pull-left btn-sm red-flamingo" type="button">
                                       <i class="fa fa-times"></i>
                                       {% trans 'Cancelar' %}
                                   </button>     
