--- a/modal/templates/modal/general/form_saldo_inicial.html
+++ b/modal/templates/modal/general/form_saldo_inicial.html
@@ -56,7 +56,21 @@
 
 <script type="text/javascript">
 $(document).ready(function() {
-
+$.fn.datepicker.dates['es'] = {
+    days: ["Domingo", "Lunes", "Martes", "Miércoles", "Jueves", "Viernes", "Sábado", "Domingo"],
+    daysShort: ["Dom", "Lun", "Mar", "Mié", "Jue", "Vie", "Sáb", "Dom"],
+    daysMin: ["Do", "Lu", "Ma", "Mi", "Ju", "Vi", "Sa", "Do"],
+    months: ["Enero", "Febrero", "Marzo", "Abril", "Mayo", "Junio", "Julio", "Agosto", "Septiembre", "Octubre", "Noviembre", "Diciembre"],
+    monthsShort: ["Ene", "Feb", "Mar", "Abr", "May", "Jun", "Jul", "Ago", "Sep", "Oct", "Nov", "Dic"],
+    today: "Hoy"
+  };
+  
+    $('.datepicker').datepicker({
+          format: "dd/mm/yyyy",
+          language: "es",
+          autoclose: true,
+          todayHighlight: true
+    }); 
 
 $("input[type=number]").click(function() {
         this.select()
@@ -88,6 +102,8 @@ $("#id_cta_ingreso").change(function(){
             $("[name='importe']").select() 
          });  
 });
+
+
 </script>
 </div>
 
