--- a/modal/templates/modal/productos/form_2.html
+++ b/modal/templates/modal/productos/form_2.html
@@ -1,33 +1,36 @@
 {% load i18n %}
 {% load static from staticfiles %}
 {% load crispy_forms_tags %}
+{% load bootstrap3 %}
+{% load i18n %}
+{% load humanize %}
 
-
-  <div id="form-container">
-    <form role="form" class="form " method="POST" action="" id="form-alta">
+<div id="form-container">
+    <form role="form" class="form " method="POST" action="" id="form-alta" enctype="multipart/form-data">
      {% csrf_token %}         
         {{ form.media }}
-        {% crispy form %}
+             <div class="col-xs-12">
+                 <div class="row">                                      
+                    <div class="col-sm-12">{% bootstrap_field form.nombre %}</div>                                                                        
+                    </div>                              
+                   
+            </div>
+            <div class="modal-buttons">
+            <div class="row">
+                <div class="col-xs-6">
+                 <button data-dismiss="modal" class="btn btn-sm pull-left btn btn-danger" type="button">
+                      <i class="fa fa-times"></i> {% trans 'Cancelar' %}
+                 </button>
+                </div>
+                <div class="col-xs-6">
+                 <button  class="btn pull-right btn-sm btn-primary" id="Aceptar" type="submit">
+                      <i class="fa fa-check"></i>{% trans 'Aceptar' %}</button>
+                </div>
+              
+              </div>
+            
+        </div>
     </form>
 </div>
 
- <script type="text/javascript">
-function readURL(input) {
 
-    if (input.files && input.files[0]) {
-        var reader = new FileReader();
-
-        reader.onload = function (e) {
-            $('#id_foto').attr('src',e.target.result);
-        }
-        console.log(input.files[0]);
-         
-        reader.readAsDataURL(input.files[0]);
-    }
-}
-
-$("#imgInp").change(function(){
-    readURL(this);
-});
-
-    </script>
