--- a/templates/ingresos/ventas/cpb_venta_form.html
+++ b/templates/ingresos/ventas/cpb_venta_form.html
@@ -231,9 +231,9 @@
 							         	 </div>
 							         	 {% if empresa.usa_impuestos %}
 							         	 <div class="row">
-							             	<div class="col-sm-3 col-xs-7"><span class="totales_comprobante">Total ITC</span></div> 
+							             	<div class="col-sm-3 col-xs-7"><span class="totales_comprobante">Total {{form.importe_tasa1.label}}</span></div> 
 							             	<div class="col-sm-3 col-xs-5">{% bootstrap_field form.importe_tasa1 show_label=False%}</div> 
-							             	<div class="col-sm-3 col-xs-7"><span class="totales_comprobante">Total TH</span></div> 
+							             	<div class="col-sm-3 col-xs-7"><span class="totales_comprobante">Total {{form.importe_tasa2.label}}</span></div> 
 							             	<div class="col-sm-3 col-xs-5">{% bootstrap_field form.importe_tasa2 show_label=False%}</div> 
 							         	 </div>
 							         	 {% endif %}
